bug fix ond modal

--- a/src/CMS/Bundle/MediaBundle/Resources/views/Media/edit.html.twig
+++ b/src/CMS/Bundle/MediaBundle/Resources/views/Media/edit.html.twig
@@ -1,2 +1,7 @@
-{{ file_details(medium, "list")|raw }}
-{{ form(form) }}
+<div class="col-md-9">
+    <img src="{{ medium.webPath }}" class="img-responsive" />
+</div>
+<div class="col-md-3">
+    {{ file_details(medium, "list")|raw }}
+    {{ form(form) }}
+</div>
