--- a/app/Resources/views/admin/base_admin.html.twig
+++ b/app/Resources/views/admin/base_admin.html.twig
@@ -18,6 +18,7 @@
         'bundles/core/css/light-bootstrap-dashboard.css'
         'bundles/core/css/dropzone.css'
 		'bundles/core/css/summernote.css'
+		'bundles/core/css/sweetalert2.min.css'
 	 		filter='cssrewrite' output='css/admin.css' %}
 		<link rel="stylesheet" type="text/css" href="{{ asset_url }}">
 	{% endstylesheets %}
@@ -216,7 +217,8 @@
 
     </div>
 </div>
-
+{% block modals %}
+{% endblock modals %}
 
     <!--   Core JS Files   -->
     <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
@@ -237,6 +239,7 @@
         '@CoreBundle/Resources/public/js/summernote.min.js'
         '@CoreBundle/Resources/public/js/app.js'
         '@CoreBundle/Resources/public/js/dropzone.js'
+        '@CoreBundle/Resources/public/js/sweetalert2.min.js'
 	%}
 		<script type="text/javascript" src="{{ asset_url }}"></script>
 	{% endjavascripts %}
