--- a/app/Resources/views/admin/base_admin.html.twig
+++ b/app/Resources/views/admin/base_admin.html.twig
@@ -237,6 +237,8 @@
 		'@CoreBundle/Resources/public/js/light-bootstrap-dashboard.js'
 		'@CoreBundle/Resources/public/js/chartist.min.js'
         '@CoreBundle/Resources/public/js/summernote.min.js'
+        '@CoreBundle/Resources/public/js/summernote-ext-link.js'
+        '@CoreBundle/Resources/public/js/summernote-ext-img.js'
         '@CoreBundle/Resources/public/js/app.js'
         '@CoreBundle/Resources/public/js/dropzone.js'
         '@CoreBundle/Resources/public/js/sweetalert2.min.js'
