--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/edit.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/edit.html.twig
@@ -1,59 +1,66 @@
 {% extends "::admin/base_admin.html.twig" %}
 
 {% block body %}
-	{{ form_start(edit_form) }}
-				<div class="col-md-3 pull-right">
-					<div class="card">
-						<div class="header">
-							<h4 class="title">Infos <a data-toggle="collapse" href="#collapseInfos" class="pull-right"><i class="fa fa-angle-down"></i></a></h4>
-							
-							<div class="clearfix"></div>
-						</div>
-						<div class="content collapse in" id="collapseInfos" aria-expanded="true">
-							<ul class="list-unstyled">
-								<li>Author: {{ app.user }}</li>
-								<li>Date: {{ 'now'|date('d/m/Y H:i:s') }}</li>
-								<li>{{ form_row(edit_form.published) }}</li>
-							</ul>
-						</div>
-						<div class="footer"></div>
-					</div>
-					<div class="card">
-						<div class="header">
-							<h4 class="title">{{ 'cms.content.languages'|trans }} <a data-toggle="collapse" href="#collapseLanguage" class="pull-right"><i class="fa fa-angle-down"></i></a></h4>
-							<div class="clearfix"></div>
-						</div>
-						<div id="collapseLanguage" class="content collapse in" aria-expanded="true">
-							{{ form_row(edit_form.language) }}
-						</div>
-						<div class="footer"></div>
-					</div>
-					<div class="card">
-						<div class="header">
-							<h4 class="title">{{ 'cms.content.categories'|trans }} <a data-toggle="collapse" href="#collapseCategory" class="pull-right"><i class="fa fa-angle-down"></i></a></h4>
-							<div class="clearfix"></div>
-						</div>
-						<div id="collapseCategory" class="content collapse in" aria-expanded="true">
-							{{ form_row(edit_form.categories) }}
-						</div>
-						<div class="footer"></div>
-					</div>
-					<div class="card">
-						<div class="header">
-							<h4 class="title">{{ 'cms.content.image'|trans }} <a data-toggle="collapse" href="#collapseImage" class="pull-right"><i class="fa fa-angle-down"></i></a></h4>
-							<div class="clearfix"></div>
-						</div>
-						<div id="collapseImage" class="content collapse in" aria-expanded="true">{{ form_row(edit_form.thumbnail) }}</div>
-						<div class="footer"></div>
-					</div>
-				</div>
-				<div class="col-md-9">
-					<div class="card">
-						<div class="content">{{ form_rest(edit_form) }} <div class="clearfix"></div></div>
-					</div>
-				</div>
-				{{ form_end(edit_form) }}
-			</div>
-		</div>
-	</div>
+    {{ form_start(edit_form) }}
+    <div class="col-md-3 pull-right">
+        <div class="card">
+            <div class="header">
+                <h4 class="title">Infos <a data-toggle="collapse" href="#collapseInfos" class="pull-right"><i
+                                class="fa fa-angle-down"></i></a></h4>
+
+                <div class="clearfix"></div>
+            </div>
+            <div class="content collapse in" id="collapseInfos" aria-expanded="true">
+                <ul class="list-unstyled">
+                    <li>Author: {{ app.user }}</li>
+                    <li>Date: {{ 'now'|date('d/m/Y H:i:s') }}</li>
+                    <li>{{ form_row(edit_form.published) }}</li>
+                </ul>
+            </div>
+            <div class="footer"></div>
+        </div>
+        <div class="card">
+            <div class="header">
+                <h4 class="title">{{ 'cms.content.languages'|trans }} <a data-toggle="collapse" href="#collapseLanguage"
+                                                                         class="pull-right"><i
+                                class="fa fa-angle-down"></i></a></h4>
+                <div class="clearfix"></div>
+            </div>
+            <div id="collapseLanguage" class="content collapse in" aria-expanded="true">
+                {{ form_row(edit_form.language) }}
+            </div>
+            <div class="footer"></div>
+        </div>
+        <div class="card">
+            <div class="header">
+                <h4 class="title">{{ 'cms.content.categories'|trans }} <a data-toggle="collapse"
+                                                                          href="#collapseCategory" class="pull-right"><i
+                                class="fa fa-angle-down"></i></a></h4>
+                <div class="clearfix"></div>
+            </div>
+            <div id="collapseCategory" class="content collapse in" aria-expanded="true">
+                {{ form_row(edit_form.categories) }}
+            </div>
+            <div class="footer"></div>
+        </div>
+        <div class="card">
+            <div class="header">
+                <h4 class="title">{{ 'cms.content.image'|trans }} <a data-toggle="collapse" href="#collapseImage"
+                                                                     class="pull-right"><i class="fa fa-angle-down"></i></a>
+                </h4>
+                <div class="clearfix"></div>
+            </div>
+            <div id="collapseImage" class="content collapse in"
+                 aria-expanded="true">{{ form_row(edit_form.thumbnail) }}</div>
+            <div class="footer"></div>
+        </div>
+    </div>
+    <div class="col-md-9">
+        <div class="card">
+            <div class="content">{{ form_rest(edit_form) }}
+                <div class="clearfix"></div>
+            </div>
+        </div>
+    </div>
+    {{ form_end(edit_form) }}
 {% endblock %}
