--- a/src/CMS/Bundle/MediaBundle/Resources/views/Media/mediaPopup.html.twig
+++ b/src/CMS/Bundle/MediaBundle/Resources/views/Media/mediaPopup.html.twig
@@ -10,7 +10,7 @@
                 {% set title = "title_" ~ defaultLanguage.id %}
                 <div class="col-md-2 thumb">
                     <a href="javascript:" onclick="getMediumInfo(this);" class="thumbnail text-center" data-url="{{ asset(medium.webPath) }}" data-id="{{ medium.id }}" data-alt="{{ medium.metas[alt] }}">
-                        <img src="{{ asset(medium.webPathList) }}" alt="{{ medium.metas[alt] }}" title="{{ medium.metas[title] }}">
+                        <img src="{{ asset(medium.webPathList) }}" alt="{{ medium.metas[alt] }}" title="{{ medium.metas[title] }}" class="img-responsive">
                     </a>
                 </div>
             {% endfor %}
