--- a/src/CMS/Bundle/MediaBundle/Resources/views/Media/mediaPopupSummernote.html.twig
+++ b/src/CMS/Bundle/MediaBundle/Resources/views/Media/mediaPopupSummernote.html.twig
@@ -19,7 +19,7 @@
             {% endfor %}
         </div>
         <div role="tabpanel" class="tab-pane" id="upload-summernote">
-            <div id="media_path" class="dropzone col-md-12 dz-clickable" data-url="/admin/media/upload-media" data-type="dropzone">
+            <div id="media_path" class="dropzone col-md-12" data-url="/admin/media/upload-media">
                 <div class="dz-default dz-message"><span>Glissez déposez vos fichiers ou cliquez pour envoyer les images</span>
                 </div>
             </div>
