--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/edit.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/edit.html.twig
@@ -13,7 +13,8 @@
             <div class="content collapse in" id="collapseInfos" aria-expanded="true">
                 <ul class="list-unstyled">
                     <li>Author: {{ app.user }}</li>
-                    <li>Date: {{ 'now'|date('d/m/Y H:i:s') }}</li>
+                    <li>Date: {{ entity.created|date('d/m/Y H:i:s') }}</li>
+                    <li><a href="{{  path('front_single', {'alias': entity.url}) }}" target="_blank">{{ 'cms.content.preview'|trans }}</a></li>
                     <li>{{ form_row(edit_form.published) }}</li>
                 </ul>
             </div>
