refactoring params front controller

--- a/templates/Default/single.html.twig
+++ b/templates/Default/single.html.twig
@@ -10,7 +10,7 @@
         <header>
             <div class="container">
                 <div class="left-header pull-left">
-                    <a href=""><span id="logo"></span><span class="title"></span></a>
+                    <a href=""><span id="logo"></span><span class="title">{{ sitename }}</span></a>
                 </div>
                 <div class="right-header pull-right">
                     <div class="buttons pull-right">
