--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -108,3 +108,29 @@
         <div class="clearfix"></div>
     {% endspaceless %}
 {% endblock %}
+
+
+{% block map_widget %}
+    {% spaceless %}
+        <div class="row">
+            <div class="col-md-12">
+                <div class="row">
+                    <div class="col-md-3">{{ form_row(form.address) }}</div>
+                    <div class="col-md-4">{{ form_row(form.latitude) }}</div>
+                    <div class="col-md-4">{{ form_row(form.longitude) }}</div>
+                    <div class="col-md-1"><div class="form-group"><label class="form-label">&nbsp;</label><a href="javascript:codeAddress()" class="btn btn-fill form-control">OK</a></div></div>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="map"></div>
+            </div>
+        </div>
+    {% endspaceless %}
+    {% block javascripts %}
+        <script src="{{ asset('/bundles/content/js/map.js') }}"></script>
+        <script async defer
+                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwy2LBbH0VPoPB3lpb8qqqJhADEZZCYs4&callback=initMap">
+        </script>
+
+    {% endblock javascripts %}
+{% endblock map_widget %}
