--- a/src/CMS/Bundle/ContentBundle/Resources/views/Category/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Category/index.html.twig
@@ -1,28 +1,28 @@
 {% extends "::admin/base_admin.html.twig" %}
 
 {% block body %}
-{% for flashMessage in app.session.flashbag.get('error') %}
-    <div class="alert alert-callout alert-danger" role="alert">
-        {{ flashMessage|trans }}
-    </div>
-{% endfor %}
-{% for flashMessage in app.session.flashbag.get('success') %}
-    <div class="alert alert-callout alert-success" role="alert">
-        {{ flashMessage|trans }}
-    </div>
-{% endfor %}
-<div id="main-card" class="card">
-    <div class="header">
-        <h4 class="title pull-left">{{ 'cms.content.category' |trans }}</h4>
-        <div class="fixed-table-toolbar">
-            <div class="columns columns-right pull-right">
-                <a href="{{ path('admin_category_new') }}" class="btn btn-default"><i class="fa fa-plus"></i></a>
+    {% for flashMessage in app.session.flashbag.get('error') %}
+        <div class="alert alert-callout alert-danger" role="alert">
+            {{ flashMessage|trans }}
+        </div>
+    {% endfor %}
+    {% for flashMessage in app.session.flashbag.get('success') %}
+        <div class="alert alert-callout alert-success" role="alert">
+            {{ flashMessage|trans }}
+        </div>
+    {% endfor %}
+    <div id="main-card" class="card">
+        <div class="header">
+            <h4 class="title pull-left">{{ 'cms.content.category' |trans }}</h4>
+            <div class="fixed-table-toolbar">
+                <div class="columns columns-right pull-right">
+                    <a href="{{ path('admin_category_new') }}" class="btn btn-default"><i class="fa fa-plus"></i></a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="content">
-         <table id="data_table" class="table table-striped table-hover" role="grid" aria-describedby="data_table">
-            <thead>
+        <div class="content">
+            <table id="data_table" class="table table-striped table-hover" role="grid" aria-describedby="data_table">
+                <thead>
                 <tr>
                     <th>Id</th>
                     <th>Title</th>
@@ -30,26 +30,36 @@
                     <th>Published</th>
                     <th class="no-sort">Actions</th>
                 </tr>
-            </thead>
-            <tbody>
-            {% for entity in entities %}
-                <tr>
-                    <td>{{ entity.id }}</td>
-                    <td>{{ entity }}</td>
-                    <td>{{ entity.description|raw }}</td>
-                    <td>
-                        <div class="switch"><input type="checkbox" class="status" data-id="{{ entity.id }}" data-repo="ContentBundle:Category" data-prop="published"></div>
-                    </td>
-                    <td>
-                        <a href="{{ path('admin_category_edit', { 'id': entity.id }) }}"><i class="fa fa-pencil"></i></a>
-                        <a data-toggle="modal" href='#modal-delete' class="" data-toggle="tooltip" data-placement="top" data-original-title="Supprimer" data-id="{{ entity.id }}"><i class="fa fa-trash-o"></i></a>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                {% for entity in entities %}
+                    <tr>
+                        <td>{{ entity.id }}</td>
+                        <td>{{ entity }}</td>
+                        <td>{{ entity.description|raw }}</td>
+                        <td>
+                            <div class="switch"><input type="checkbox"
+                                                       {% if entity.published %}checked="checked"{% endif %}
+                                                       class="status" data-id="{{ entity.id }}"
+                                                       data-repo="ContentBundle:Category" data-prop="published"
+                                                       onchange="changeProp(this)"></div>
+                        </td>
+                        <td>
+                            <a href="{{ path('admin_category_edit', { 'id': entity.id }) }}"><i
+                                        class="fa fa-pencil"></i></a>
+                            <a data-toggle="modal" href='#modal-delete' class="" data-toggle="tooltip"
+                               data-placement="top" data-original-title="Supprimer" data-id="{{ entity.id }}"><i
+                                        class="fa fa-trash-o"></i></a>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
-    </div>
+{% endblock %}
+
+{% block modals %}
     <div class="modal fade" id="modal-delete" aria-labelledby="simpleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -61,11 +71,17 @@
                     {{ 'tc.category.modal.text_delete'|trans }}
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn ink-reaction btn-raised btn-default-bright" data-dismiss="modal"><i class="fa fa-close"></i> {{ 'cancel'|trans }}</button>
-                    <a href="" class="btn ink-reaction btn-raised btn-danger"><i class="fa fa-trash-o"></i> {{ 'delete'|trans }}</a>
+                    <button type="button" class="btn ink-reaction btn-raised btn-default-bright" data-dismiss="modal"><i
+                                class="fa fa-close"></i> {{ 'cancel'|trans }}</button>
+                    <a href="" class="btn ink-reaction btn-raised btn-danger"><i
+                                class="fa fa-trash-o"></i> {{ 'delete'|trans }}</a>
                 </div>
             </div>
         </div>
     </div>
+{% endblock %}
+{% block javascript %}
+    <script type="text/javascript">
 
+    </script>
 {% endblock %}
