--- a/app/Resources/views/admin/base_admin.html.twig
+++ b/app/Resources/views/admin/base_admin.html.twig
@@ -249,6 +249,11 @@
 	<script type="text/javascript">
     	$(document).ready(function(){
 
+    	    $('.modal').each(function() {
+    	       var modal = $(this).detach();
+               modal.appendTo('body');
+            });
+
         	$sidebar = $('.sidebar');
             $sidebar_img_container = $sidebar.find('.sidebar-background');
             $('.card-user .image img').attr('src', $sidebar.data('image'));
