--- a/web/templates/Default/category.html.twig
+++ b/web/templates/Default/category.html.twig
@@ -1,56 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>{{ title }}</title>
-	<link rel="stylesheet" href="{{ asset('/templates/' ~ theme ~ '/assets/css/bootstrap.min.css') }}">
-	<link rel="stylesheet" href="{{ asset('/templates/' ~ theme ~ '/style.css') }}">
-</head>
-<body ng-app="CMSApp">
-	<header>
-		<div class="container">
-			<div class="left-header pull-left">
-				<a href=""><span id="logo"></span><span class="title"></span></a>
-			</div>
-			<div class="right-header pull-right">
-				<div class="buttons pull-right">
-					<a href="" class="btn btn-fill">Inscription</a>
-					<a href="" class="btn btn-simple">Login</a>
-				</div>
-			</div>
-			<div class="clearfix"></div>
-		</div>
-	</header>
-	{% verbatim %}
-	<div class="container">
-		<div id="content" class="row" ng-controller="contentListController as contentList">
-			<div class="col-sm-12 col-md-4" ng-repeat="content in contentList.contents">
-				<div class="card">
-					<div class="image" ng-show="{{content.thumbnail != ''}}">
-						<img ng-src="/uploads/thumbs/{{content.thumbnail}}" />
-						<div class="header">
-							<h2 class="title">{{content.title}}</h2>
-							<div class="date">{{content.created | date : 'dd/MM/yyyy'}}</div>
-						</div>
-					</div>
-					<div class="content">
-						<div class="no-thumb" ng-show="{{content.thumbnail == ''}}" >
-							<h2 class="title">{{content.title}}</h2>
-							<div class="date">{{content.created | date : 'dd/MM/yyyy'}}</div>
-							<div class="description" ng-bind-html="content.description | rawHtml"></div>
-						</div>
-						<div class="pull-left">
-							<img ng-src="/uploads/avatars/{{content.author.id}}/{{content.author.avatar}}" alt="{{content.author.user_nicename}}" title="{{content.author.user_nicename}}" class="avatar">
-							<span class="author">{{content.author.user_nicename}}</span>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	{% endverbatim %}
-	<script src="{{ asset('/templates/' ~ theme ~ '/assets/js/angular.min.js') }}"></script>
-	<script src="{{ asset('/templates/' ~ theme ~ '/assets/js/app.js') }}"></script>
-</body>
-</html>
+{% include "@cms/Borderland/header.html.twig" %}
+<div class="container">
+    <h1>{{ content.title }}</h1>
+    <div class="col-2-of-3">
+        {{ content.description|raw }}
+    </div>
+</div>
+{% include "@cms/Borderland/footer.html.twig" %}
