postload pour pouvoir générer les champs dans un template

--- a/templates/Borderland/single.html.twig
+++ b/templates/Borderland/single.html.twig
@@ -41,7 +41,7 @@
         </button>
     </div>
     <div class="container">
-        <h4 class="dancing">Partir c'est crever un pneu</h4>
+        <h4 class="dancing">Partir c'est crever un pneu...</h4>
         <ul class="list-unstyled">
             <li><a href="/endroits-a-visiter">Endroits à visiter</a></li>
             <li><a href="/activites">Activités</a></li>
