--- a/src/CMS/Bundle/ContentBundle/Resources/views/Fields/map.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Fields/map.html.twig
@@ -1,1 +1,15 @@
-map
+<div id="map"></div>
+
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwy2LBbH0VPoPB3lpb8qqqJhADEZZCYs4&callback=initMap"></script>
+<script>
+var map;
+var lat = {{ value.latitude }};
+var lng = {{ value.longitude }};
+function initMap() {
+    geocoder = new google.maps.Geocoder();
+    map = new google.maps.Map(document.getElementById('map'), {
+        center: {lat: lat, lng: lng},
+        zoom: 8
+    });
+}
+</script>
