--- a/src/CMS/Bundle/ContentBundle/Resources/views/Fields/map.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Fields/map.html.twig
@@ -1,3 +1,4 @@
+{% if value is iterable %}
 <div id="map"></div>
 
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwy2LBbH0VPoPB3lpb8qqqJhADEZZCYs4&callback=initMap"></script>
@@ -9,7 +10,14 @@ function initMap() {
     geocoder = new google.maps.Geocoder();
     map = new google.maps.Map(document.getElementById('map'), {
         center: {lat: lat, lng: lng},
-        zoom: 8
+        zoom: 13
+    });
+
+    var marker = new google.maps.Marker({
+        map: map,
+        position: {lat: lat, lng: lng},
+        animation: google.maps.Animation.DROP
     });
 }
 </script>
+{% endif %}
