--- a/templates/Borderland/single.html.twig
+++ b/templates/Borderland/single.html.twig
@@ -1,12 +1,14 @@
 {% include "@cms/Borderland/header.html.twig" %}
     <div class="container">
         <h1>{{ content.title }}</h1>
-        <div class="col-2-of-3">
-            {{ content.description|raw }}
-        </div>
+        <div class="section">
+	        <div class="col col-8">
+	            {{ content.description|raw }}
+	        </div>
 
-        <div class="col-1-of-3">
-            {{ content.get('carte')|raw }}
+	        <div class="col col-4">
+	            {{ content.get('carte')|raw }}
+	        </div>
         </div>
     </div>
 {% include "@cms/Borderland/footer.html.twig" %}
