--- a/templates/Borderland/footer.html.twig
+++ b/templates/Borderland/footer.html.twig
@@ -1,12 +1,5 @@
 </div>
 <nav id="main-nav">
-    <div class="pull-right">
-        <button class="hamburger hamburger--elastic" type="button">
-            <span class="hamburger-box">
-                <span class="hamburger-inner"></span>
-            </span>
-        </button>
-    </div>
     <div class="container">
         <h4 class="dancing">Partir c'est crever un pneu</h4>
         <ul class="list-unstyled">
@@ -19,24 +12,25 @@
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <script>
     // Look for .hamburger
-    var hamburgers = document.querySelectorAll(".hamburger");
-
-    var main_nav = document.getElementById("main-nav");
-    // On click
-    for (var i = 0; i < hamburgers.length; ++i) {
-        var hamburger = hamburgers[i];
-        hamburger.addEventListener("click", function () {
-            // Toggle class "is-active"
-            hamburger.classList.toggle("is-active");
-            // Do something else, like open/close menu
-            main_nav.classList.toggle("in");
-        });
-    }
-
+    var hamburgers = $(".hamburger");
+    var main_nav = $("#main-nav");
+    hamburgers.each(function() {
+        var hamburger = $(this);
+        hamburger.on('click', function() {
+            if (!$(this).hasClass('is-active')) {
+                $('.hamburger').addClass('is-active');
+                main_nav.fadeIn('slow');
+            } else {
+                $('.hamburger').removeClass('is-active');
+                main_nav.fadeOut('slow');
+            }
+        })
+    })
 
     $(document).ready(function () {
         var image = $('#main-header').data('background');
         $('#main-header').css('background-image', 'url(' + image + ')');
+
     })
 </script>
 </body>
