--- a/web/templates/Borderland/category.html.twig
+++ b/web/templates/Borderland/category.html.twig
@@ -3,15 +3,23 @@
     <h1>{{ category.title }}</h1>
     <div class="section">
         {% for content in contents %}
-            <div class="col col-4">
-                <div class="image">
-                    <img src="{{ content.thumbnail.getWebPathSize("medium") }}" class="img-responsive"
-                         alt="{{ content.thumbnail.metas['alt_1'] }}" title="{{ content.thumbnail.metas['title_1'] }}">
+            <article>
+                <div class="article-holder">
+                    <div class="text-article">
+                        <div class="text-centerer">
+                            <div class="text-inner">
+                                <h5>{{ content.title }}</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="" class="link-article"></a>
+                    <div class="image-shader"></div>
+                    <div class="image-article">
+                        <span class="image"><img src="{{ content.thumbnail.getWebPathSize("medium") }}" class="img-responsive"
+                                                 alt="{{ content.thumbnail.metas['alt_1'] }}" title="{{ content.thumbnail.metas['title_1'] }}"></span>
+                    </div>
                 </div>
-                <div class="text">
-                    {{ content.title }}
-                </div>
-            </div>
+            </article>
         {% endfor %}
     </div>
     <div class="clearfix"></div>
