--- a/web/templates/Borderland/category.html.twig
+++ b/web/templates/Borderland/category.html.twig
@@ -1,6 +1,19 @@
 {% include "@cms/Borderland/header.html.twig" %}
 <div class="container-category">
-    <h1>{{ category.title }}</h1>
+    <div class="nav-category-outer">
+        <div class="nav-category-holder">
+            <ul class="nav nav-category">
+                {% for cat in categories %}
+                    {% if cat.id == category.id %}
+                        <li><span>{{ cat.title }}</span></li>
+                    {% else %}
+                        <li><a href="{{ path('front_single', {'alias': cat.url}) }}">{{ cat.title }}</a></li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+
     <div class="section">
         {% for content in contents %}
             <article>
@@ -15,8 +28,10 @@
                     <a href="" class="link-article"></a>
                     <div class="image-shader"></div>
                     <div class="image-article">
-                        <span class="image"><img src="{{ content.thumbnail.getWebPathSize("medium") }}" class="img-responsive"
-                                                 alt="{{ content.thumbnail.metas['alt_1'] }}" title="{{ content.thumbnail.metas['title_1'] }}"></span>
+                        <span class="image"><img src="{{ content.thumbnail.getWebPathSize("medium") }}"
+                                                 class="img-responsive"
+                                                 alt="{{ content.thumbnail.metas['alt_1'] }}"
+                                                 title="{{ content.thumbnail.metas['title_1'] }}"></span>
                     </div>
                 </div>
             </article>
