--- a/templates/Borderland/category.html.twig
+++ b/templates/Borderland/category.html.twig
@@ -25,7 +25,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="" class="link-article"></a>
+                    <a href="{{ path('front_single', {'alias': content.url}) }}" class="link-article"></a>
                     <div class="image-shader"></div>
                     <div class="image-article">
                         <span class="image"><img src="{{ content.thumbnail.getWebPathSize("medium") }}"
