--- a/src/CMS/Bundle/ContentBundle/Resources/views/Category/edit.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Category/edit.html.twig
@@ -1,24 +1,62 @@
 {% extends "::admin/base_admin.html.twig" %}
 
 {% block body %}
-	<div class="section-header">
-		<ol class="breadcrumb">
-			<li><a href="">Catégorie</a></li>
-			<li class="active">Edition</li>
-		</ol>
-	</div>
+    <div class="section-header">
+        <ol class="breadcrumb">
+            <li><a href="{{ path('admin_category') }}">Catégorie</a></li>
+            <li class="active">Edition</li>
+        </ol>
+    </div>
 
-	<div class="section-body contain-lg">
-		{% for flashMessage in app.session.flashbag.get('error') %}
-		    <div class="alert alert-callout alert-danger" role="alert">
-		        {{ flashMessage|trans }}
-		    </div>
-		{% endfor %}
-		{% for flashMessage in app.session.flashbag.get('success') %}
-		    <div class="alert alert-callout alert-success" role="alert">{{ flashMessage|trans }}</div>
-		{% endfor %}
-		<div class="card">
-			<div class="card-body">{{ form(edit_form) }}</div>
-		</div>
-	</div>
+    <div class="section-body contain-lg">
+        {% for flashMessage in app.session.flashbag.get('error') %}
+            <div class="alert alert-callout alert-danger" role="alert">
+                {{ flashMessage|trans }}
+            </div>
+        {% endfor %}
+        {% for flashMessage in app.session.flashbag.get('success') %}
+            <div class="alert alert-callout alert-success" role="alert">{{ flashMessage|trans }}</div>
+        {% endfor %}
+        {{ form_start(edit_form) }}
+        <div class="col-md-3 pull-right">
+            <div class="card">
+                <div class="header">
+                    <h4 class="title">Infos <a data-toggle="collapse" href="#collapseInfos" class="pull-right"><i
+                                    class="fa fa-angle-down"></i></a></h4>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="content">
+                    <ul class="list-unstyled">
+                        <li>Date: {{ entity.created|date('d/m/Y H:i:s') }}</li>
+                        <li>{{ form_row(edit_form.published) }}</li>
+                        <li>{{ form_row(edit_form.parent) }}</li>
+                        <li>{{ form_row(edit_form.ordre) }}</li>
+                    </ul>
+                </div>
+                <div class="footer"></div>
+            </div>
+            <div class="card">
+                <div class="header">
+                    <h4 class="title">{{ 'cms.content.languages'|trans }} <a data-toggle="collapse"
+                                                                             href="#collapseLanguage"
+                                                                             class="pull-right"><i
+                                    class="fa fa-angle-down"></i></a></h4>
+                    <div class="clearfix"></div>
+                </div>
+                <div id="collapseLanguage" class="content collapse in" aria-expanded="true">
+                    {{ form_row(edit_form.language) }}
+                </div>
+                <div class="footer"></div>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="card">
+                <div class="content">
+                    {{ form_rest(edit_form) }}
+                    <div class="clearfix"></div>
+                </div>
+            </div>
+        </div>
+        {{ form_end(edit_form) }}
+    </div>
 {% endblock %}
