--- a/src/CMS/Bundle/ContentBundle/Resources/views/Category/new.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Category/new.html.twig
@@ -1,41 +1,54 @@
 {% extends "::admin/base_admin.html.twig" %}
 
 {% block body %}
-	{{ form_start(form) }}
-				<div class="col-md-3 pull-right">
-					<div class="card">
-						<div class="header">
-							<h4 class="title">Infos <a data-toggle="collapse" href="#collapseInfos" class="pull-right"><i class="fa fa-angle-down"></i></a></h4>
-							
-							<div class="clearfix"></div>
-						</div>
-						<div class="content collapse in" id="collapseInfos" aria-expanded="true">
-							<ul class="list-unstyled">
-								<li>Author: {{ app.user }}</li>
-								<li>Date: {{ 'now'|date('d/m/Y H:i:s') }}</li>
-								<li>{{ form_row(form.published) }}</li>
-							</ul>
-						</div>
-						<div class="footer"></div>
-					</div>
-					<div class="card">
-						<div class="header">
-							<h4 class="title">{{ 'cms.content.languages'|trans }} <a data-toggle="collapse" href="#collapseLanguage" class="pull-right"><i class="fa fa-angle-down"></i></a></h4>
-							<div class="clearfix"></div>
-						</div>
-						<div id="collapseLanguage" class="content collapse in" aria-expanded="true">
-							{{ form_row(form.language) }}
-						</div>
-						<div class="footer"></div>
-					</div>
-				</div>
-				<div class="col-md-9">
-					<div class="card">
-						<div class="content">{{ form_rest(form) }} <div class="clearfix"></div></div>
-					</div>
-				</div>
-				{{ form_end(form) }}
-			</div>
-		</div>
-	</div>
+    <div class="section-header">
+        <ol class="breadcrumb">
+            <li><a href="{{ path('admin_category') }}">Catégorie</a></li>
+            <li class="active">Edition</li>
+        </ol>
+    </div>
+
+    <div class="section-body contain-lg">
+        {{ form_start(form) }}
+        <div class="col-md-3 pull-right">
+            <div class="card">
+                <div class="header">
+                    <h4 class="title">Infos <a data-toggle="collapse" href="#collapseInfos" class="pull-right"><i
+                                    class="fa fa-angle-down"></i></a></h4>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="content">
+                    <ul class="list-unstyled">
+                        <li>Date: {{ entity.created|date('d/m/Y H:i:s') }}</li>
+                        <li>{{ form_row(form.published) }}</li>
+                        <li>{{ form_row(form.parent) }}</li>
+                        <li>{{ form_row(form.ordre) }}</li>
+                    </ul>
+                </div>
+                <div class="footer"></div>
+            </div>
+            <div class="card">
+                <div class="header">
+                    <h4 class="title">{{ 'cms.content.languages'|trans }} <a data-toggle="collapse"
+                                                                             href="#collapseLanguage"
+                                                                             class="pull-right"><i
+                                    class="fa fa-angle-down"></i></a></h4>
+                    <div class="clearfix"></div>
+                </div>
+                <div id="collapseLanguage" class="content collapse in" aria-expanded="true">
+                    {{ form_row(form.language) }}
+                </div>
+                <div class="footer"></div>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="card">
+                <div class="content">
+                    {{ form_rest(form) }}
+                    <div class="clearfix"></div>
+                </div>
+            </div>
+        </div>
+        {{ form_end(form) }}
+    </div>
 {% endblock %}
