--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
@@ -1,6 +1,12 @@
 {% extends "::admin/base_admin.html.twig" %}
 
 {% block body %}
+    <div class="section-header">
+        <ol class="breadcrumb">
+            <li><a href="{{ path('admin_content') }}">Contenus</a></li>
+            <li class="active">Création</li>
+        </ol>
+    </div>
 {% for flashMessage in app.session.flashbag.get('error') %}
     <div class="alert alert-callout alert-danger" role="alert">
         {{ flashMessage|trans }}
