--- a/templates/Borderland/footer.html.twig
+++ b/templates/Borderland/footer.html.twig
@@ -2,11 +2,7 @@
 <nav id="main-nav">
     <div class="container">
         <h4 class="dancing">Partir c'est crever un pneu</h4>
-        <ul class="list-unstyled">
-            <li><a href="/endroits-a-visiter">Endroits à visiter</a></li>
-            <li><a href="/activites">Activités</a></li>
-            <li><a href="/recettes">Recettes</a></li>
-        </ul>
+        {{ 'menu-principal'|render_menu }}
     </div>
 </nav>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
