media et categorie

--- a/src/CMS/Bundle/MediaBundle/Resources/views/Media/details.html.twig
+++ b/src/CMS/Bundle/MediaBundle/Resources/views/Media/details.html.twig
@@ -1,3 +1,4 @@
 {{ file_details(medium, "list")|raw }}
 <a href="javascript:" onclick="addMedia(this)" class="btn btn-primary pull-right" data-id="{{ medium.id }}">{{ "cms.media.featured_image"|trans }}</a>
+<div class="clearfix"></div>
 {{ form(form) }}
