--- a/templates/Borderland/footer.html.twig
+++ b/templates/Borderland/footer.html.twig
@@ -2,7 +2,7 @@
 <nav id="main-nav">
     <div class="container">
         <h4 class="dancing">Partir c'est crever un pneu</h4>
-        {{ 'menu-principal'|render_menu }}
+        {{ 'menu-principal'|render_menu|raw }}
     </div>
 </nav>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
