--- a/src/CMS/Bundle/ContentBundle/Resources/views/Category/new.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Category/new.html.twig
@@ -40,6 +40,17 @@
                 </div>
                 <div class="footer"></div>
             </div>
+            <div class="card">
+                <div class="header">
+                    <h4 class="title">{{ 'cms.content.image'|trans }} <a data-toggle="collapse" href="#collapseImage"
+                                                                         class="pull-right"><i class="fa fa-angle-down"></i></a>
+                    </h4>
+                    <div class="clearfix"></div>
+                </div>
+                <div id="collapseImage" class="content collapse in"
+                     aria-expanded="true">{{ form_row(form.banner) }}</div>
+                <div class="footer"></div>
+            </div>
         </div>
         <div class="col-md-9">
             <div class="card">
