--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
@@ -87,7 +87,7 @@
                     <td>{{ entity.author }}</td>
                     <td>
                         <div class="switch">
-                            <input type="checkbox" class="status" {% if entity.published %}checked="checked"{% endif %} data-id="{{ entity.id }}" data-repo="ContentBundle:Content" data-prop="published">
+                            <input type="checkbox" class="status" {% if entity.published %}checked="checked"{% endif %} data-id="{{ entity.id }}" data-repo="ContentBundle:Content" data-prop="published" onchange="changeProp(this)">
                         </div>
                     </td>
                     <td>{% if entity.modified %}{{ entity.modified|date(date_format) }}{% endif %}</td>
