--- a/src/CMS/Bundle/MenuBundle/Resources/views/Twig/menu.html.twig
+++ b/src/CMS/Bundle/MenuBundle/Resources/views/Twig/menu.html.twig
@@ -13,8 +13,8 @@
                 {% set multilvl = true %}
             {% endif %}
             <li class="menu-item lvl-{{ entry.lvl }}{% if entry.hasChildren() %} menu-parent{% endif %}">
-                <a href="{{ path('front_single', {'alias': entry.url}) }}"{% if entry.external %}
-                   target="_blank"{% endif %}>{{ entry.title }}</a>
+                <a href="{{ path('front_single', {'alias': entry.url.url}) }}"{% if entry.url.external %}
+                   target="_blank" rel="noopener"{% endif %}>{{ entry.title }}</a>
             </li>
             {% if multilvl %}</ul>{% endif %}
         {% endif %}
