--- a/templates/Borderland/style.css
+++ b/templates/Borderland/style.css
@@ -69,6 +69,11 @@ h1 {
     background-position: center center;
 }
 
+/*********************
+ * Menu
+ *********************/
+
+
 @keyframes fade-in {
     0% {opacity: 0;}
     25% {opacity: 0.25; visibility: visible;}
